# test-infra

./: BUILD.bazel  go.mod  go.sum  repos.bzl
config/jobs/etcd/: etcd-periodics.yaml
config/jobs/image-pushing/: k8s-staging-cluster-api.yaml  k8s-staging-dns.yaml  k8s-staging-jobset.yaml  k8s-staging-lws.yaml
config/jobs/kubernetes-sigs/agent-sandbox/: agent-sandbox-periodics-main.yaml  agent-sandbox-presubmits-main.yaml
config/jobs/kubernetes-sigs/azuredisk-csi-driver/: azuredisk-csi-driver-config.yaml
config/jobs/kubernetes-sigs/azurefile-csi-driver/: azurefile-csi-driver-config.yaml
config/jobs/kubernetes-sigs/blob-csi-driver/: blob-csi-driver-config.yaml
config/jobs/kubernetes-sigs/cloud-provider-azure/: cloud-provider-azure-config.yaml  cloud-provider-azure-presubmit-1.32.yaml
config/jobs/kubernetes-sigs/cluster-api/: cluster-api-main-periodics-upgrades.yaml  cluster-api-main-periodics.yaml  cluster-api-main-presubmits.yaml  cluster-api-prowjob-gen.yaml  cluster-api-release-1-12-periodics-upgrades.yaml  cluster-api-release-1-12-presubmits.yaml  cluster-api-release-1-13-periodics-upgrades.yaml  cluster-api-release-1-13-presubmits.yaml
config/jobs/kubernetes-sigs/cluster-api-operator/: cluster-api-operator-periodics-main.yaml  cluster-api-operator-presubmits-main.yaml
config/jobs/kubernetes-sigs/cluster-api-provider-aws/: cluster-api-provider-aws-periodics-clusterclass.yaml  cluster-api-provider-aws-periodics-main.yaml  cluster-api-provider-aws-periodics-release-2.10.yaml  cluster-api-provider-aws-periodics-release-2.11.yaml  cluster-api-provider-aws-periodics-release-2.9.yaml  cluster-api-provider-aws-postsubmits.yaml  cluster-api-provider-aws-presubmits-clusterclass.yaml  cluster-api-provider-aws-presubmits-main.yaml  cluster-api-provider-aws-presubmits-release-2.10.yaml  cluster-api-provider-aws-presubmits-release-2.11.yaml  cluster-api-provider-aws-presubmits-release-2.9.yaml  cluster-api-provider-aws-prowjob-gen.yaml
config/jobs/kubernetes-sigs/cluster-api-provider-azure/: cluster-api-provider-azure-periodics-main.yaml  cluster-api-provider-azure-presubmits-main.yaml  cluster-api-provider-azure-presubmits-release-v1beta1.yaml
config/jobs/kubernetes-sigs/cluster-api-provider-digitalocean/: cluster-api-provider-digitalocean-periodics-release-1-5.yaml  cluster-api-provider-digitalocean-periodics-release-1-6.yaml  cluster-api-provider-digitalocean-periodics.yaml  cluster-api-provider-digitalocean-presubmits-release-1-5.yaml  cluster-api-provider-digitalocean-presubmits-release-1-6.yaml  cluster-api-provider-digitalocean-presubmits.yaml
config/jobs/kubernetes-sigs/cluster-api-provider-vsphere/: cluster-api-provider-vsphere-main-periodics-upgrades.yaml  cluster-api-provider-vsphere-main-presubmits.yaml  cluster-api-provider-vsphere-prowjob-gen.yaml  cluster-api-provider-vsphere-release-1-15-periodics-upgrades.yaml  cluster-api-provider-vsphere-release-1-15-presubmits.yaml  cluster-api-provider-vsphere-release-1-16-periodics-upgrades.yaml  cluster-api-provider-vsphere-release-1-16-presubmits.yaml
config/jobs/kubernetes-sigs/dra-driver-nvidia-gpu/: dra-driver-nvidia-gpu-gcp-nvkind.yaml  dra-driver-nvidia-gpu-lambda.yaml
config/jobs/kubernetes-sigs/jobset/: jobset-periodics-main.yaml  jobset-periodics-release-0-10.yaml  jobset-periodics-release-0-11.yaml  jobset-presubmit-main.yaml  jobset-presubmit-release-0-10.yaml  jobset-presubmit-release-0-11.yaml
config/jobs/kubernetes-sigs/kjob/: kjob-periodics-main.yaml  kjob-periodics-release-0.1.yaml  kjob-presubmits-main.yaml  kjob-presubmits-release-0.1.yaml
config/jobs/kubernetes/kops/: build_jobs.py  (+13 more)
config/prow/: config.yaml  plugins.yaml
config/testgrids/openshift/: redhat-openshift-informing.yaml  redhat-openshift-ocp-release-4.19-informing.yaml  redhat-openshift-ocp-release-4.20-informing.yaml
experiment/lambda/: e2e-test.sh
pkg/io/: BUILD.bazel  opener.go  opener_test.go  provider.go
pkg/io/file/: BUILD.bazel  main.go
pkg/io/gcs/: BUILD.bazel  main.go
pkg/io/provider-imports/: BUILD.bazel  provider-imports.go
pkg/io/providers/: BUILD.bazel  providers.go
pkg/io/providers/file/: BUILD.bazel  file.go
pkg/io/providers/gcs/: BUILD.bazel  gcs.go
pkg/io/providers/s3/: BUILD.bazel  s3.go
pkg/io/providers/util/: BUILD.bazel  path.go
pkg/io/s3/: BUILD.bazel  main.go
pkg/io/v2/: BUILD.bazel  opener.go
pkg/io/v2/provider-imports/: BUILD.bazel  provider-imports.go
pkg/io/v2/providers/: BUILD.bazel  providers.go  providers_test.go
pkg/io/v2/providers/file/: BUILD.bazel  file.go
pkg/io/v2/providers/gcs/: BUILD.bazel  gcs.go
pkg/io/v2/providers/s3/: BUILD.bazel  s3.go
pkg/io/v2/providers/util/: BUILD.bazel  path.go
prow/: BUILD.bazel
prow/artifact-uploader/: BUILD.bazel  controller.go
prow/cluster/: storage-config.yaml
prow/cmd/deck/: BUILD.bazel  job_history.go  main.go  pr_history.go
prow/cmd/gcsupload/: BUILD.bazel  main.go
prow/cmd/gerrit/: BUILD.bazel  main.go  main_test.go
prow/cmd/plank/: BUILD.bazel  main.go
prow/cmd/status-reconciler/: BUILD.bazel  main.go
prow/cmd/tide/: BUILD.bazel  main.go
prow/external-plugins/lenses/: BUILD.bazel  README.md  main.go
prow/external-plugins/lenses/links/: BUILD.bazel  links.css  links.go  template.html
prow/external-plugins/mention/: BUILD.bazel  main.go
prow/external-plugins/mention/plugin/: BUILD.bazel  mention.go  mention_test.go
prow/gcsupload/: BUILD.bazel  metadata.go  metadata_test.go  options.go  run.go  run_test.go
prow/git/: git.go
prow/github/: client.go
prow/initupload/: BUILD.bazel  run.go
prow/pjutil/: BUILD.bazel  pjutil.go
prow/plugins/owners-label/: owners-label.go
prow/pod-utils/clone/: clone.go
prow/pod-utils/gcs/: BUILD.bazel  metadata.go
prow/sidecar/: BUILD.bazel  run.go
prow/spyglass/: BUILD.bazel  artifacts.go  gcsartifact.go  gcsartifact_fetcher.go  spyglass.go  testgrid.go
prow/statusreconciler/: BUILD.bazel  controller.go  status.go  status_test.go
prow/tide/: BUILD.bazel  status.go  tide.go
prow/tide/history/: BUILD.bazel  history.go  history_test.go
(+55 files in other folders)
