load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "opener.go",
        "provider.go",
    ],
    importpath = "k8s.io/test-infra/pkg/io",
    visibility = ["//visibility:public"],
    deps = [
        "//prow/errorutil:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@dev_gocloud//blob:go_default_library",
        "@dev_gocloud//gcerrors:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/io/file:all-srcs",
        "//pkg/io/gcs:all-srcs",
        "//pkg/io/provider-imports:all-srcs",
        "//pkg/io/s3:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["opener_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_google_cloud_go//storage:go_default_library",
        "@dev_gocloud//blob:go_default_library",
    ],
)
