load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "metadata.go",
        "options.go",
        "run.go",
    ],
    importpath = "k8s.io/test-infra/prow/gcsupload",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/io:go_default_library",
        "//pkg/io/provider-imports:go_default_library",
        "//prow/apis/prowjobs/v1:go_default_library",
        "//prow/flagutil:go_default_library",
        "//prow/pod-utils/downwardapi:go_default_library",
        "//prow/pod-utils/gcs:go_default_library",
        "@com_github_googlecloudplatform_testgrid//util/gcs:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@dev_gocloud//blob:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "metadata_test.go",
        "options_test.go",
        "run_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/io:go_default_library",
        "//prow/apis/prowjobs/v1:go_default_library",
        "//prow/pod-utils/downwardapi:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@io_k8s_apimachinery//pkg/util/diff:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
