load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["provider-imports.go"],
    importpath = "k8s.io/test-infra/pkg/io/provider-imports",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/io/file:go_default_library",
        "//pkg/io/gcs:go_default_library",
        "//pkg/io/s3:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
