load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//prow:def.bzl", "prow_image")

NAME = "mention"

prow_image(
    name = "image",
    base = "@git-base//image",
    component = NAME,
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/test-infra/prow/external-plugins/mention",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/flagutil:go_default_library",
        "//prow/config:go_default_library",
        "//prow/config/secret:go_default_library",
        "//prow/external-plugins/mention/plugin:go_default_library",
        "//prow/flagutil:go_default_library",
        "//prow/git/v2:go_default_library",
        "//prow/github:go_default_library",
        "//prow/interrupts:go_default_library",
        "//prow/pluginhelp/externalplugins:go_default_library",
        "//prow/plugins:go_default_library",
        "//prow/repoowners:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//prow/external-plugins/mention/plugin:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "mention",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
