load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["providers.go"],
    importpath = "k8s.io/test-infra/pkg/io/v2/providers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/io/v2/providers/file:go_default_library",
        "//pkg/io/v2/providers/gcs:go_default_library",
        "//pkg/io/v2/providers/s3:go_default_library",
        "@dev_gocloud//blob:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/io/v2/providers/file:all-srcs",
        "//pkg/io/v2/providers/gcs:all-srcs",
        "//pkg/io/v2/providers/s3:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
