load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["s3.go"],
    importpath = "k8s.io/test-infra/pkg/io/v2/providers/s3",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/io/v2/providers:go_default_library",
        "//pkg/io/v2/providers/util:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@dev_gocloud//blob:go_default_library",
        "@dev_gocloud//blob/s3blob:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
